Work for JFokus
