# ai-scorer/src/main/java/ai/scoring/rest/InteractionResource.java
@@ -1,14 +1,22 @@
 package ai.scoring.rest;
 
+import java.time.Instant;
+import java.util.UUID;
+
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
+import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 import ai.scoring.api.AiApi;
+import ai.scoring.domain.interaction.InteractionQuery;
 import ai.scoring.mapping.InteractionEventMapper;
+import ai.scoring.mapping.InteractionMapper;
 import ai.scoring.mapping.InteractionModeMapper;
 import ai.scoring.mapping.InteractionScoreMapper;
 import ai.scoring.model.InteractionEvent;
+import ai.scoring.model.Interactions;
 import ai.scoring.service.InteractionService;
 
 import io.quarkus.logging.Log;
@@ -20,12 +28,14 @@ public class InteractionResource implements AiApi {
 	private final InteractionEventMapper interactionEventMapper;
 	private final InteractionModeMapper interactionModeMapper;
 	private final InteractionScoreMapper interactionScoreMapper;
+	private final InteractionMapper interactionMapper;
 	private final InteractionService interactionService;
 
-	public InteractionResource(InteractionEventMapper interactionEventMapper, InteractionModeMapper interactionModeMapper, InteractionScoreMapper interactionScoreMapper, InteractionService interactionService) {
+	public InteractionResource(InteractionEventMapper interactionEventMapper, InteractionModeMapper interactionModeMapper, InteractionScoreMapper interactionScoreMapper, InteractionMapper interactionMapper, InteractionService interactionService) {
 		this.interactionEventMapper = interactionEventMapper;
 		this.interactionModeMapper = interactionModeMapper;
 		this.interactionScoreMapper = interactionScoreMapper;
+		this.interactionMapper = interactionMapper;
 		this.interactionService = interactionService;
 	}
 
@@ -40,6 +50,35 @@ public class InteractionResource implements AiApi {
 			.map(this.interactionScoreMapper::map)
 			.map(Response::ok)
 			.orElseGet(Response::noContent)
+			.build();
+	}
+
+	@Override
+	public Response findInteractions(@QueryParam("applicationName") String applicationName, @QueryParam("interfaceName") String interfaceName, @QueryParam("methodName") String methodName, @QueryParam("start") Instant start, @QueryParam("end") Instant end) {
+		var query = InteractionQuery.builder()
+			.applicationName(applicationName)
+			.interfaceName(interfaceName)
+			.methodName(methodName)
+			.start(start)
+			.end(end)
+			.build();
+
+		var interactions = this.interactionService.findInteractions(query)
+			.stream()
+			.map(this.interactionMapper::map)
+			.toList();
+
+		return interactions.isEmpty() ?
+		       Response.status(Status.NOT_FOUND).build() :
+		       Response.ok(Interactions.builder().interactions(interactions).build()).build();
+	}
+
+	@Override
+	public Response getInteractionById(UUID uuid) {
+		Log.infof("Getting interaction by id: %s", uuid);
+		return this.interactionService.getInteraction(uuid)
+			.map(Response::ok)
+			.orElseGet(() -> Response.status(Status.NOT_FOUND))
 			.build();
 	}
 }
